--- a/pea-lab-tymon/lab1/haskell/Makefile
+++ b/pea-lab-tymon/lab1/haskell/Makefile
@@ -1,26 +1,16 @@
+OPTS  = -optl"-Wl,-read_only_relocs,suppress"
+OPTS += -package haskell98
+OPTS += -package text
+OPTS += -rtsopts
+OPTS += -O2
 all: Main
 
-Main: Main.o
-	ghc -optl"-Wl,-read_only_relocs,suppress" -package haskell98 -package memoize -o Main Main.o
+Main: Main.hs
+	ghc $(OPTS) -o Main Main.hs
 
-Main.o: Main.hs
-	ghc -c -O2 Main.hs
+profile: clean
+	ghc $(OPTS) -prof -auto-all -o Main Main.hs
+	./Main +RTS -p -K64000000 -RTS
 
 clean:
 	rm -f Main *.hi *.o
-
-# test:
-	# time ./main  5
-	# time ./main o 5
-# time ./main b 6
-# time ./main o 6
-# time ./main b 8
-# time ./main o 8
-# time ./main b 9
-# time ./main o 9
-# time ./main b 10
-# time ./main o 10
-# time ./main b 11
-# time ./main o 11
-# time ./main b 12
-# time ./main o 12
