--- a/technologie-sieciowe-projekt/Makefile
+++ b/technologie-sieciowe-projekt/Makefile
@@ -1,7 +1,9 @@
-projekt.pdf: projekt.tex
+projekt.pdf: projekt.tex chapters/*.tex
 	latex --output-format=pdf projekt.tex
 
 all: projekt.pdf
+
+# projekt.tex:
 
 clean:
 	rm -f *.out *.aux *.log projekt.pdf
