--- a/bazy-danych-projekt/webapp/Gemfile
+++ b/bazy-danych-projekt/webapp/Gemfile
@@ -14,6 +14,9 @@ gem 'jqueryui_rails'
 gem 'jruby-openssl'
 gem 'json'
 
+gem 'awesome_print'
+gem 'devise'
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
