--- a/pea-lab-jacek/projekt2/pom.xml
+++ b/pea-lab-jacek/projekt2/pom.xml
@@ -18,6 +18,24 @@
           <target>1.5</target>
         </configuration>
       </plugin>
+	  
+	  <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>pea.proj2.Api</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+	  
      </plugins>
    </build>
 
