--- a/bazy-danych-projekt/webapp/Gemfile
+++ b/bazy-danych-projekt/webapp/Gemfile
@@ -16,6 +16,7 @@ gem 'json'
 
 gem 'awesome_print'
 gem 'devise'
+gem 'carrierwave'
 
 # Gems used only for assets and not required
 # in production environments by default.
