--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -1,29 +1,30 @@
 source 'https://rubygems.org'
 
 gem 'rails', '3.2.2'
-
-gem 'jruby-openssl'
+gem 'thin'
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
+  gem 'compass-rails'
+  gem 'jquery-rails'
 
-  gem 'therubyrhino'
+  gem 'therubyracer'
 
   gem 'uglifier', '>= 1.0.3'
 end
 
-gem 'jquery-rails'
-# This shit requires less, which requires therubyracer, which fails to build
-# gem 'twitter-bootstrap-rails'
 gem 'haml'
 
 group :development do
   gem 'rspec-rails', '~> 2.8.1'
+  gem 'spork-rails'
   gem 'guard-rails'
   gem 'guard-rspec'
+  gem 'guard-spork'
+  gem 'guard-livereload'
   gem 'capybara'
   gem 'annotate'
 
