--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -1,7 +1,12 @@
 source 'https://rubygems.org'
 
 gem 'rails', '3.2.2'
+gem 'sqlite3'
+
 gem 'thin'
+
+gem 'haml'
+#gem 'devise'
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -16,16 +21,17 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
 end
 
-gem 'haml'
-
 group :development do
   gem 'rspec-rails', '~> 2.8.1'
+  gem 'factory_girl_rails'
+  gem 'capybara'
   gem 'spork-rails'
+
   gem 'guard-rails'
   gem 'guard-rspec'
   gem 'guard-spork'
+
   gem 'guard-livereload'
-  gem 'capybara'
   gem 'annotate'
 
   gem 'growl'
