--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -6,7 +6,7 @@ gem 'sqlite3'
 gem 'thin'
 
 gem 'haml'
-#gem 'devise'
+gem 'omniauth'
 
 # Gems used only for assets and not required
 # in production environments by default.
