--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -7,6 +7,8 @@ gem 'thin'
 
 gem 'haml'
 gem 'omniauth'
+gem 'omniauth-twitter'
+gem 'omniauth-github'
 
 # Gems used only for assets and not required
 # in production environments by default.
