--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -5,6 +5,9 @@ gem 'rails', '3.2.2'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
+# puma webserver is faster than webrick
+gem 'puma'
+
 gem 'activerecord-jdbcsqlite3-adapter'
 
 gem 'jruby-openssl'
