preparing for deploy

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,8 @@
 .DS_Store
 /dist/target
 /dist/project/target
+/dist/project/project/target
+/dist/.ensime
+/dist/.ensime_port
+/dist/logs/application.log
 *.pgm
