Temporary disabled factory_girl_rails

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -24,7 +24,7 @@ end
 
 group :development do
   gem 'rspec-rails', '~> 2.8.1'
-  gem 'factory_girl_rails'
+  # gem 'factory_girl_rails'
   gem 'capybara'
   gem 'spork-rails'
 
