--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,10 @@
 ---
 webapp: ec2-107-20-61-228.compute-1.amazonaws.com
-webapi: ec2-184-73-42-103.compute-1.amazonaws.com
+webapi:
+- ec2-184-73-42-103.compute-1.amazonaws.com
+- ec2-23-20-74-174.compute-1.amazonaws.com
+- ec2-107-20-11-153.compute-1.amazonaws.com
+- ec2-184-73-83-39.compute-1.amazonaws.com
 workers:
 - ec2-107-22-11-17.compute-1.amazonaws.com
 - ec2-23-22-20-28.compute-1.amazonaws.com
