--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -24,7 +24,7 @@ end
 
 group :development do
   gem 'rspec-rails', '~> 2.8.1'
-  # gem 'factory_girl_rails'
+  gem 'factory_girl_rails'
   gem 'capybara'
   gem 'spork-rails'
 
@@ -35,7 +35,9 @@ group :development do
   gem 'guard-livereload'
   gem 'annotate'
 
-  gem 'growl'
-  gem 'rb-fsevent', :require => false
+  if RUBY_PLATFORM =~ /darwin/
+    gem 'growl'
+    gem 'rb-fsevent', :require => false
+  end
 end
 
