--- a/hosts.yml
+++ b/hosts.yml
@@ -1,12 +1,16 @@
 ---
-webapp: ec2-107-20-61-228.compute-1.amazonaws.com
+webapp: ec2-23-20-42-58.compute-1.amazonaws.com
 webapi:
-- ec2-184-73-42-103.compute-1.amazonaws.com
-- ec2-23-20-74-174.compute-1.amazonaws.com
-- ec2-107-20-11-153.compute-1.amazonaws.com
-- ec2-184-73-83-39.compute-1.amazonaws.com
+- ec2-184-73-145-55.compute-1.amazonaws.com
+- ec2-23-21-17-52.compute-1.amazonaws.com
+- ec2-23-22-27-64.compute-1.amazonaws.com
+- ec2-23-20-82-146.compute-1.amazonaws.com
+- ec2-107-21-171-178.compute-1.amazonaws.com
+- ec2-50-16-27-147.compute-1.amazonaws.com
+- ec2-107-22-13-165.compute-1.amazonaws.com
+- ec2-184-73-125-178.compute-1.amazonaws.com
 workers:
-- ec2-107-22-11-17.compute-1.amazonaws.com
-- ec2-23-22-20-28.compute-1.amazonaws.com
-- ec2-23-22-41-189.compute-1.amazonaws.com
-- ec2-50-16-21-45.compute-1.amazonaws.com
+- stopped
+- stopped
+- stopped
+- stopped
