add description of web app

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -35,6 +35,8 @@ group :development do
   gem 'guard-livereload'
   gem 'annotate'
 
+  gem "rails-erd"
+
   if RUBY_PLATFORM =~ /darwin/
     gem 'growl'
     gem 'rb-fsevent', :require => false
