--- a/semestr-vii/sso-jacek/lab3/zad1/Makefile
+++ b/semestr-vii/sso-jacek/lab3/zad1/Makefile
@@ -1,18 +1,27 @@
 CC = gcc
-CFLAGS = -Wall -ggdb -std=c99
-BIN = zad1a
-OBJ = $(BIN).o
+CFLAGS = -Wall -std=c99
+ZAD1A = zad1a
+ZAD1B = zad1b
+OBJ1 = $(ZAD1A).o
+OBJ2 = $(ZAD1B).o
 
-all: $(BIN)
+all: $(ZAD1A) $(ZAD1B)
 
-$(BIN): $(OBJ)
+$(ZAD1A): $(OBJ1)
+	$(CC) $(CFLAGS) -o $@ $^
+
+$(ZAD1B): $(OBJ2)
 	$(CC) $(CFLAGS) -o $@ $^
 
 %.o: %.c
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-test: $(BIN)
-	./$(BIN) 
+testa: $(ZAD1A)
+	./$(ZAD1A)
+
+testb: $(ZAD1B)
+	./$(ZAD1B)
+
 
 clean:
-	rm -f $(BIN) *.o
+	rm -f $(ZAD1A) $(ZAD1B) *.o
