--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 
 uklady-cyfrowe-i-systemy-wbudowane/lab4/Moore/lab4/lab4_html/fit/applet.js
 pea-projekt/projekt2_spr/~$charts.xlsx
+"semestr-vii/inz-jacek/07_Optymalizacja_wydajnos\314\201ci_aplikacji"
