--- a/semestr-vii/inz-jacek/Makefile
+++ b/semestr-vii/inz-jacek/Makefile
@@ -7,5 +7,11 @@ main:
 	pdflatex main.tex
 	pdflatex main.tex
 
+arch:
+	pdflatex main-arch.tex
+	bibtex main-arch
+	pdflatex main-arch.tex
+	pdflatex main-arch.tex
+
 clean:
 	rm *.aux *.bbl *.pandoc *.blg *.log *.out *.toc
